// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Picture /> props className 1`] = `
<picture
  className="ek-picture ololo"
/>
`;

exports[`<Picture /> props className 2`] = `
<img
  className="ek-picture__item ololo"
/>
`;

exports[`<Picture /> props picture-tag 1`] = `
<span
  className="ek-picture"
/>
`;

exports[`<Picture /> props picture-tag 2`] = `
<span
  className="ek-picture__item"
/>
`;

exports[`<Picture /> render 1`] = `
<picture
  className="ek-picture"
/>
`;

exports[`<Picture /> render 2`] = `
<img
  className="ek-picture__item"
/>
`;
